--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,7 +2,7 @@
   text-align: center;
   min-height: 100vh;
   height: 100%;
-  background-color: #2d4c55;
+  background-color: #32535d;
 }
 
 .App-logo {
